[package]
name = "create2crunch"
version = "0.3.0"
authors = ["0age <0age@protonmail.com"]
edition = "2021"
rust-version = "1.65"

[dependencies]
alloy-primitives = { version = "0.8.11", features = ["rand"] }
console = "0.15.8"
fs4 = "0.8"
ocl = "0.19.7"
rand = "0.8"
rustc-hash = "2.0"
separator = "0.4.1"
terminal_size = "0.4.0"

[profile.release]
opt-level = 3
lto = "fat"
debug = "line-tables-only"
strip = "debuginfo"
panic = "abort"
codegen-units = 1

[features]
default = ["asm"]
asm = ["alloy-primitives/asm-keccak"]

[lib]
name = "create2crunch"
path = "src/lib.rs"

[[bin]]
name = "create2crunch"
path = "src/main.rs"
